# qarvis

./: .env.example  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
ai-agents/poc-user-story-to-scenario/: .env.example  README.md  cases.example.yaml  generate_gherkin.py  requirements.txt  results-prompt.md
ai-brain/: pyproject.toml
ai-brain/agents/: README.md
ai-brain/evals/: README.md
ai-brain/rag/: README.md
docs/: qarvis-cahier-des-charges.md  qarvis-poc-spec.md  qarvis-rag-wiki-spec.md  qarvis-spec-technique.md
infra/: README.md  docker-compose.yml
infra/docker/: Dockerfile.rwa
kaneAI/: README.md  prompt-smoke-tests-lambdatests-demo.md
tests-node/: .eslintrc.cjs  README.md  package.json  playwright.config.ts  tsconfig.json
tests-node/features/: payment.feature
tests-node/src/fixtures/: auth.fixture.ts  seed-data.ts
tests-node/src/pages/: FeedPage.ts  LoginPage.ts  NewTransactionPage.ts
tests-node/src/utils/: builders.ts
tests-node/steps/: payment.steps.ts
tests-node/tests/api/: transactions.api.spec.ts
tests-node/tests/e2e/: auth.spec.ts  negative.spec.ts  transactions.spec.ts
tests-node/tests/smoke/: critical-path.spec.ts
